# vanilla

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  flake.nix  iOS.md  meson.build
.github/workflows/: build.yml  test.yml
android/app/: build.gradle
android/app/jni/: Application.mk  CMakeLists.txt
android/app/jni/src/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
app/: CMakeLists.txt  backend.cpp  backend.h  backendinitdialog.cpp  backendinitdialog.h  gamepadhandler.cpp  gamepadhandler.h  inputconfigdialog.cpp  inputconfigdialog.h  keymap.cpp  keymap.h  mainwindow.cpp  mainwindow.h  meson.build  resource.qrc  syncdialog.cpp  syncdialog.h  syncprogressdialog.cpp  syncprogressdialog.h  udpaddressdialog.cpp  udpaddressdialog.h  videodecoder.cpp  videodecoder.h  viewer.cpp  viewer.h
buildroot/: Config.in  external.desc  external.mk
buildroot/board/nx/: post_build.sh
buildroot/board/nx/rootfs/: init
buildroot/board/raspberrypi/: config_0w.txt  config_zero2w_64bit.txt  post_build.sh
buildroot/configs/: nx_defconfig  vanilla_nintendoswitch_defconfig  vanilla_nx_defconfig  vanilla_raspberrypi0w_defconfig  vanilla_raspberrypizero2w_64_defconfig
buildroot/package/: 0001-fix-makefile.patch  Config.in
buildroot/package/joycond/: Config.in  joycond.mk
buildroot/package/nexmon/: 0001-fix-ll-to-lfl.patch  Config.in  nexmon.mk
buildroot/package/nvidia-tegra-bsp/: Config.in  nvidia-tegra-bsp.mk
buildroot/package/rpi-ffmpeg/: Config.in  rpi-ffmpeg.mk
buildroot/package/vanilla/: Config.in  vanilla.mk
buildroot/package/x11r7/: xserver_xorg-server.hash  xserver_xorg-server.mk
buildroot/patches/linux/: 0001-nvidia-tegra.patch
caramel/: CMakeLists.txt  main.c
cli/: CMakeLists.txt  main.c
client/: CMakeLists.txt  audiohandler.cpp  audiohandler.h  backend.cpp  backend.h  com.mattkc.vanilla.desktop  gamepadhandler.cpp  gamepadhandler.h  inputconfigdialog.cpp  keymap.cpp  main.cpp  mainwindow.cpp  mainwindow.h  syncdialog.cpp  syncdialog.h  syncprogressdialog.cpp  syncprogressdialog.h  vanilla.cpp  vanilla.h  videodecoder.cpp  videodecoder.h  viewer.cpp  viewer.h
cmake/: FindDRM.cmake  FindLibNL.cmake
docker/: Dockerfile  README.md  build.sh  run.sh
docker/android/: Dockerfile  build.sh  vanilla.jks
docker/linux/: Dockerfile  build.sh  install.sh
docker/macos/: Dockerfile  build.sh  toolchain.cmake
docker/nintendoswitch/: Dockerfile  build.sh
docker/raspberrypi0w/: Dockerfile  build.sh
docker/raspberrypizero2w/: Dockerfile  build.sh
docker/rpi/: Dockerfile
docker/windows/: Dockerfile  build.sh  mingw-w64-x86_64.cmake
gui/: CMakeLists.txt  config.c  config.h  def.c  def.h  drm.h  lang.c  lang.h  main.c  pipemgmt.c  pipemgmt.h  platform.c  platform.h  platform_nx_imu.c  platform_nx_imu.h
gui/assets/tex/keys/: README.md
gui/game/: game_decode.c  game_main.h  game_record.c
gui/langs/english_en/: english_en.h
gui/langs/french_fr/: french_fr.h
gui/menu/: menu.c  menu.h  menu_common.c  menu_common.h  menu_connection.c  menu_edit.c  menu_edit.h  menu_game.c  menu_game.h  menu_gamepad.c  menu_gamepad.h  menu_main.c  menu_main.h  menu_region.c  menu_region.h  menu_rename.c  menu_settings.c  menu_settings.h  menu_sudo.c  menu_sudo.h  menu_sudo_warning.c  menu_sudo_warning.h  menu_sync.c  menu_sync.h
gui/res/: com.mattkc.vanilla.desktop
gui/res/switch/: boot.scr  boot.txt  config.xml  nx-plat.dtimg  vanilla.ini
gui/tests/: latencytest.c  latencytest.ts
gui/ui/: ui.c  ui.h  ui_anim.h  ui_keyboard.c  ui_keyboard.h  ui_priv.h  ui_sdl.c  ui_sdl.h  ui_sdl_drm.c  ui_sdl_drm.h  ui_util.c  ui_util.h
ios/: Info.plist  LaunchScreen.storyboard  README.md  build.sh  toolchain.cmake
ios/AppIcon.icon/: icon.json
ios/Assets.xcassets/: Contents.json
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Vanilla Gamepad/: ios_stubs.c  platform.h
ios/Vanilla Gamepad/SDL3_ttf.xcframework/: Info.plist
ios/Vanilla Gamepad/Vanilla Gamepad/: AppState.h  Config.c  Config.h  File.txt  Font.c  Font.h  Info-Framework.plist  Info.plist  InputGamepad.c  InputGamepad.h  UI.c  UI.h  VanillaClient.c  VanillaClient.h  VideoStream.c  VideoStream.h  features.h  vanilla.h
ios/Vanilla Gamepad/Vanilla Gamepad.xcodeproj/: project.pbxproj
lib/: CMakeLists.txt  meson.build  status.c  status.h  sync.c  util.c  util.h  vanilla.c  vanilla.h  wpa.c  wpa.h
lib/gamepad/: audio.c  audio.h  command.c  command.h  gamepad.c  gamepad.h  input.c  input.h  video.c  video.h
lib/test/: audioheader.c  bittest.c  reversebit.c  reversebitstresstest.c
lib/tests/: bittest.c
passthru/: CMakeLists.txt  main.c
pipe/: CMakeLists.txt  common.c  def.h  main.c  meson.build  pipe.h
pipe/arduino/: README.md
pipe/arduino/vanilla-pipe/: vanilla-pipe.ino
pipe/linux/: CMakeLists.txt  audio_capture.c  audio_capture.h  busybox.config  def.h  dhcp.sh  hw_decode.c  hw_decode.h  main.c  meson.build  ports.h  wpa.c  wpa.h
pipe/linux/dhcp/: CMakeLists.txt  dhcpc.c  options.c  packet.c  script.c  socket.c
pipe/linux/polkit/: com.mattkc.vanilla.policy.in  com.mattkc.vanilla.rules  vanilla-polkit-install.sh
rpi/: CMakeLists.txt  config.c  config.h  def.h  drm.c  drm.h  lang.c  lang.h  main.c  main2.c  pipemgmt.c  platform.c  ui.c  ui.h
rpi/game/: game_decode.c  game_decode.h  game_decode_mediacodec.h  game_main.c  game_main.h  game_record.h
rpi/menu/: menu.c  menu.h  menu_common.c  menu_common.h  menu_connection.c  menu_connection.h  menu_delete.c  menu_delete.h  menu_edit.c  menu_game.c  menu_game.h  menu_gamepad.c  menu_gamepad.h  menu_main.c  menu_main.h  menu_region.c  menu_rename.h  menu_settings.c  menu_sudo.c  menu_sudo.h  menu_sync.c  menu_sync.h
rpi/ui/: ui.c  ui.h  ui_anim.c  ui_anim.h  ui_priv.h  ui_sdl.c  ui_sdl2.c  ui_sdl2.h  ui_util.c  ui_util.h
server/: CMakeLists.txt  gamepad.c  gamepad.h  main.c  server.c  server.h  status.c  status.h  sync.c  sync.h  util.c  util.h  vanilla.c  vanilla.h  wpa.c  wpa.h
server/gamepad/: audio.c  audio.h  gamepad.c  gamepad.h  input.c  input.h  video.c  video.h
(+81 files in other folders)
